--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 theme: jekyll-theme-minimal
 title: Paul Greenwood's homepage
 description: Bookmark this to keep an eye on my project updates!
+
+lsi: false
+safe: true
+source: .
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
