On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   .gitignore
	deleted:    README-DESKTOP-08NVQTI.md
	modified:   README.md
	modified:   _config.yml
	modified:   all_repos.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: Paul Greenwood's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Paul Greenwood - Software Developer
+description: Software developer specializing in web development and full-stack applications. Check out my projects and get in touch!
 
 lsi: false
 safe: true
